--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -58,9 +58,9 @@ import BaseLayout from '../layouts/BaseLayout.astro';
         <h3 class="font-heading text-xl font-bold text-yellow-400 mt-6 mb-3">Verantwortliche Stelle</h3>
         <p class="text-gray-300 mb-4">
           Die verantwortliche Stelle für die Datenverarbeitung auf dieser Website ist:<br /><br />
-          SV Staden 1921 e.V.<br />
-          [Straße und Hausnummer]<br />
-          [PLZ] Friedberg-Staden<br /><br />
+          SV Teutonia Staden 1921 e.V.<br />
+          Parkweg<br />
+          61197 Florstadt<br /><br />
           E-Mail: <a href="mailto:info@sv-staden.de" class="text-yellow-400 hover:underline">info@sv-staden.de</a>
         </p>
 
