Fixed news page

--- a/src/pages/aktuelles.astro
+++ b/src/pages/aktuelles.astro
@@ -64,7 +64,7 @@ const categories = ['Alle', '1. Mannschaft', 'Jugend', 'Verein', 'Alte Herren'];
               class="news-item group cursor-pointer bg-[#171717] hover:bg-[#1a1a1a] transition-colors"
               data-category={item.category}
             >
-              <a href={`/news/${item.slug}`} class="block">
+              <a href={`/aktuelles/${item.slug}`} class="block">
                 <div class="relative overflow-hidden">
                   <div class="aspect-video bg-[#1f1f1f]">
                     {item.image ? (
