--- a/src/pages/mannschaften.astro
+++ b/src/pages/mannschaften.astro
@@ -13,7 +13,7 @@ const teams = [
     name: '2. Mannschaft',
     league: 'Kreisliga C',
     training: 'Di & Do, 19:00 Uhr',
-    coach: '[Trainer Name]',
+    coach: 'Pascal Zika',
     description: 'Die Reserve bietet Spielern die Möglichkeit, sich für die erste Mannschaft zu empfehlen.',
   },
   {
@@ -39,7 +39,7 @@ const otherdepartments = [
   {
     name: 'Yoga',
     training: 'Fr, 19:00 Uhr',
-    coach: 'Jens Paetzold',
+    coach: 'TBD',
     description: 'Bewegung und Dehnung ist das A & O.',
   },
 ];
